<resources>
    <string name="app_name">Ecom</string>
    <string name="login">Login</string>
    <string name="register_menu">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="default_address">Default Address</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="please_wait_loading">Please wait loading…</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_result_found_for_this_query">No Result found for this query</string>
    <string name="checkout">Checkout</string>
    <string name="no_item_in_cart">No Item In Cart</string>
    <string name="error_loading">Error Loading Data</string>
    <string name="total">Total</string>
    <string name="change_address">Change Address</string>
    <string name="current_password">Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
</resources>
